2002-01-04  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-ui-sync-status.c:
	(impl_bonobo_ui_sync_status_state): Check for NULL before calling atoi.

2002-01-04  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_auto_merge): only set
	the container if we are still active after getting the remote
	container, as we could be de-activated before finishing with an
	original activation call
	(impl_Bonobo_Control_activate): only emit the activated signal if
	we are still active (same deal as above)

2002-01-04  Anders Carlsson  <andersca@gnu.org>

	* bonobo/bonobo-ui-sync-status.c: Show the resize grip by default, and
	only disable it if resize_grip is set to 0.

2002-01-03  Bill Haneman  <bill.haneman@sun.com>

	* bonobo/bonobo-socket.h:
	Add missing BONOBO_TYPE_SOCKET macro.

2002-01-03  Anders Carlsson  <andersca@gnu.org>

	* bonobo/bonobo-ui-sync-toolbar.c (impl_bonobo_ui_sync_toolbar_update_root): 
	Plug a leak.

2002-01-02  Dave Camp  <dave@ximian.com>

	* bonobo/bonobo-control-frame.c (impl_Bonobo_ControlFrame_notifyActivated): 
	(impl_Bonobo_ControlFrame_activateURI): Use g_signal_emit instead of 
	gtk_signal_emit, and cast the control frame to GObject rather than
	GtkObject.

2002-01-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c
	(impl_Bonobo_UIComponent__get_name): stub.
	(impl_Bonobo_UIComponent_unsetContainer),
	(impl_Bonobo_UIComponent_setContainer): impl.
	(bonobo_ui_component_class_init): fully populate epv.

	* bonobo/bonobo-ui-engine.c (sub_component_destroy):
	de-register the component.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_unset_container): remove redundant
	'rm' command; and just deregister.

	* bonobo/bonobo-window.c (bonobo_window_dispose): impl.
	(destroy_priv): fold into
	(bonobo_window_finalize): here & upd.
	(bonobo_window_class_init): upd.

	* bonobo/bonobo-ui-sync-status.c
	(impl_bonobo_ui_sync_status_state): kill
	redundant braces - grr.
